--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -1,8 +1,10 @@
 {%load static%}
 <div id="wrapper">
 
+
     <!-- Sidebar -->
     <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
+
 
         <!-- Sidebar - Brand -->
         <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
@@ -10,11 +12,13 @@
                 {% comment %} <i class="fas fa-laugh-wink"></i> {% endcomment %}
                 <img src="{%static 'img/logo.jpg' %}" width="50" height="50">
             </div>
-            <div class="sidebar-brand-text mx-3">E <sup>-Agri</sup></div>
+            <div class="sidebar-brand-text mx-3">Agri<sup>-Credit</sup></div>
         </a>
+
 
         <!-- Divider -->
         <hr class="sidebar-divider my-0">
+
 
         <!-- Nav Item - Dashboard -->
         <li class="nav-item">
@@ -30,10 +34,12 @@
         <!-- Divider -->
         <hr class="sidebar-divider">
 
+
         <!-- Heading -->
         <div class="sidebar-heading">
             Services
         </div>
+
 
         <!-- Nav Item - Pages Collapse Menu -->
         <li class="nav-item">
@@ -48,9 +54,11 @@
                     <a class="collapse-item" href="{% url 'aggrefert' %}">Fertilizers</a>
                     <a class="collapse-item" href="{% url 'aggrmachine' %}">Machinary</a>
                     <a class="collapse-item" href="{% url 'aggrpesti' %}">Pesticides</a>
+                    <a class="collapse-item" href="{% url 'aggrseed' %}">Seeds</a>
                 </div>
             </div>
         </li>
+
 
         <!-- Nav Item - Utilities Collapse Menu -->
         <li class="nav-item">
@@ -66,17 +74,21 @@
                     <a class="collapse-item" href="{% url 'farmfert' %}">Fertilizers</a>
                     <a class="collapse-item" href="{% url 'famrmachine' %}">Machinary</a>
                     <a class="collapse-item" href="{% url 'farmpesti' %}">Pesticides</a>
+                    <a class="collapse-item" href="{% url 'farmseed' %}">Seeds</a>
                 </div>
             </div>
         </li>
 
+
         <!-- Divider -->
         <hr class="sidebar-divider">
+
 
         <!-- Heading -->
         <div class="sidebar-heading">
             Your Products
         </div>
+
 
         <li class="nav-item">
             <a class="nav-link" href="{% url 'sell' %}">
@@ -88,6 +100,7 @@
                 <i class="fas fa-fw fa-chart-area"></i>
                 <span>My Orders</span></a>
         </li>
+
 
         <!-- Nav Item - Tables -->
         <li class="nav-item">
@@ -104,27 +117,34 @@
         <!-- Divider -->
         <hr class="sidebar-divider d-none d-md-block">
 
+
         <!-- Sidebar Toggler (Sidebar) -->
         <div class="text-center d-none d-md-inline">
             <button class="rounded-circle border-0" id="sidebarToggle"></button>
         </div>
 
+
     </ul>
     <div id="content-wrapper" class="d-flex flex-column">
+
 
         <!-- Main Content -->
         <div id="content">
 
+
             <!-- Topbar -->
             <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
+
 
                 <!-- Sidebar Toggle (Topbar) -->
                 <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
                     <i class="fa fa-bars"></i>
                 </button>
 
+
                 <!-- Topbar Navbar -->
                 <ul class="navbar-nav ml-auto">
+
 
                     <!-- Nav Item - Search Dropdown (Visible Only XS) -->
                     <li class="nav-item dropdown no-arrow d-sm-none">
@@ -150,9 +170,12 @@
                         </div>
                     </li>
 
+
           
 
+
                     <div class="topbar-divider d-none d-sm-block"></div>
+
 
                     <!-- Nav Item - User Information -->
                     <li class="nav-item dropdown no-arrow">
@@ -187,7 +210,8 @@
                         </div>
                     </li>
 
+
                 </ul>
 
+
             </nav>
-    <!-- End of Sidebar -->
